# glider_kayak_sim

./: .gitignore  CMakeLists.txt  README.txt  package.xml
csv/: glider_shape.csv  goal_shape.csv  kayak_shape.csv  pointer_shape.csv
data/: data_format.txt  data_specs.txt
include/: Raster.hpp  Wired.hpp  includes.hpp
launch/: glider_launch.launch  kayak_launch.launch  launch_all.launch  sim_launch.launch  vehicles.launch  world_launch.launch
lib/: Raster.cpp  Wired.cpp
msg/: Array3D.msg  GliderStatus.msg  KayakStatus.msg  STU.msg  UnderwaterGeoPoint.msg  UnderwaterGeoPointStamped.msg  UnderwaterGeoPose.msg  UnderwaterGeoPoseStamped.msg
scripts/: get_ROMS.py  glider_launch.sh  netcdf_test.py  sim_launch.sh  sparse_gp_test.py
src/: get_ROMS.py  kayak_sensor.py  kayak_sim.py  marine_viz.cpp  multi_robot_mapping.py  ros_web_interface.py  ross_kayak.py  service_chatter.py  slocum_glider.py  utils.py  vehicles.py  waypoint_chatter.py  wms_server.py  world_sim.py
srv/: SimBounds.srv  SimQuery.srv  SimSnapshot.srv
web/: index.html
web/css/: app.css  ol-popup.css  ol.css
web/js/: app.js
yaml/: sim_params.yaml
